work well on Android 15; add language zh;